@startuml
'https://plantuml.com/class-diagram

class InventoryManagementApplication {
    main()
    start()
}
InventoryManagementApplication --> InventoryManagementApplicationController

class Item{
    private String name
    private String serialNumber
    private String price

    +getSerialNumberString()
    +setSerialNumberString()
    +getItemName()
    +setItemName()
    +getPrice()
    +setPrice()

}

InventoryManagementApplicationController --> Item

class InventoryManagementApplicationController {
    +initialize()
    -addItemClick()
    -saveList()
    -loadList()
    -removeItemClick()
    -removeAllItems()
    -setLoadSelectedItemButtonClick()
    -modifyItemClick()
    -clearButtonClick()
    -saveListTSV()
    -loadListTSV()
    -returnButtonClick()
    -search()
    -searchByName()
    -searchBySerialNumber()
    -serialNumberValidForMod()
    -checkIfSerialNumberExists()
    -Item createItem()
    -priceValid()
    -nameValid()
    -checkNameError()
    -checkIfSerialNumberExistsMod()
    -serialNumberValid()
    -refreshItemAddTextFields()
    -counterSet()







}

@enduml